<resources>
    <string name="app_name">teamcount2</string>
    <string name="team">team</string>
    <string name="count">0</string>
    <string name="add3">+3 points</string>
    <string name="add2">+2 points</string>
    <string name="add1">+1 points</string>
    <string name="reset">reset</string>

    <string name="hint">cel</string>
    <string name="btn">change</string>
    <string name="text">result</string>

    <string name="dollar">dollar</string>
    <string name="euro">euro</string>
    <string name="won">won</string>
    <string name="rmb_hint">INPUT RMB</string>

    <string name="input_dollar_hint">1 dollar=? rmb</string>
    <string name="input_euro_hint">1 euro=? rmb</string>
    <string name="input_won_hint">1 won=? rmb</string>
    <string name="open_config">config</string>
    <string name="btn_save">save</string>
    <string name="change">change</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>

    <string name="rdo_home_label">首页</string>
    <string name="rdo_func_label">功能</string>
    <string name="rdo_setting_label">设置</string>
</resources>
